# yemen-ipcc-rs

./: .gitignore  .oxlintrc.json  Cargo.toml  README.md  index.html  styles.css
src/: App.css  App.jsx  App.tsx  app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/device_management/: device.rs  mod.rs  product_types.rs
src-tauri/src/device_management/handlers/: battery.rs  hardware.rs  mod.rs  os.rs  storage.rs
src/DeviceInfo/: DeviceInfo.css  DeviceInfo.jsx  DeviceInfo.tsx  DeviceProvider.tsx
src/DeviceInfo/DeviceInfoBoxes/: Battery.jsx  Battery.tsx  DeviceAll.css  Info.jsx  Info.tsx  OS.jsx  OS.tsx  Storage.jsx  Storage.tsx
src/DeviceOptions/: DeviceOptions.css  DeviceOptions.jsx  DeviceOptions.tsx
src/DeviceOptions/Button/: StartButton.tsx  installation_check.tsx  installation_result.tsx
src/DeviceOptions/Options/: Bundles.jsx  Bundles.tsx  Containers.jsx  Containers.tsx  DropDown.css  Theme.jsx  Theme.tsx
src/DevicePreview/: DevicePreview.css  DevicePreview.jsx  DevicePreview.tsx
src/DisconnectedScreen/: DisconnectedScreen.css  DisconnectedScreen.tsx
src/device_management/: device_context.rs  mod.rs
src/device_management/device/: battery.rs  device_model.rs  mod.rs  os.rs  product_types.rs  storage.rs
src/main_component/: main_comp.module.css  main_comp.rs  mod.rs
src/main_component/iphone_information/: iphone_info.module.css  iphone_info.rs  mod.rs
src/main_component/iphone_screenshot/: iphone_screenshot.module.css  (+2 more)
src/options_component/: mod.rs  opt_comp.module.css  opt_comp.rs
(+10 files in other folders)
