[package]
name = "yemen-ipcc"
version = "0.1.0"
description = "A remake of the original YemenIPCC in Rust"
authors = ["Abdullah-Albanna"]
edition = "2021"
homepage = "https://github.com/Abdullah-Albanna/yemenipcc-rs"
repository = "https://github.com/Abdullah-Albanna/yemenipcc-rs"
keywords = ["ios", "ipcc", "carrier bundle", "cellular", "sim"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yemen_ipcc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
#rsmobiledevice = { git = "https://github.com/Abdullah-Albanna/rsmobiledevice", rev="c5854ca" }
rsmobiledevice = { path = "../../rsmobiledevice" }
regex = "1.11.1"
